2021-10-05 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Relase version 3.0.0

2021-09-07 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Ensure compatibility with PHP 8

2021-04-06 Francois Suter (Idéative)  <typo3@ideative.ch>

    * Ensure compatibility with TYPO3 11, drop support for TYPO3 8 and 9

2021-02-22 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Update composer manifest
	* Release version 2.4.1

2020-05-07 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Release version 2.4.0

2020-04-12 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Implement new configuration check API, resolves #7
	* Update documentation settings, resolves #8

2020-04-10 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Ensure compatibility with TYPO3 10

2018-12-28 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Drop compatibility with TYPO3 7, prepare for TYPO3, code cleanup, resolves #6
	* Add functional tests
	* Release version 2.3.0

2018-07-18 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Updated documentation regarding allowed absolute file paths
	* Released version 2.2.2 and 2.2.3

2018-02-15 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Updated headers initialization (thanks to Alex Böswetter)
	* Released version 2.2.1

2018-01-23 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Released version 2.2.0

2018-01-19 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Used new FileUtility for reading files, resolves #4
	* Improved localised error strings, resolves #1

2017-04-05 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Released version 2.1.0

2017-04-01 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Verified compatibility with TYPO3 CMS 8, resolves #3

2016-05-02 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Released version 2.0.0, resolves #76005

2016-04-25 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Refactored for TYPO3 CMS 7, resolves #75926

2014-06-05 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Released version 1.5.0, resolves #57779
